compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__target_implementations__function_with_no_valid_implementations.snap
---
source: compiler-core/src/type_/tests/target_implementations.rs
expression: "\n@external(javascript, \"wibble\", \"wobble\")\nfn javascript_only() -> Int\n\n@external(erlang, \"wibble\", \"wobble\")\nfn erlang_only() -> Int\n\npub fn main() {\n    javascript_only()\n    erlang_only()\n}\n"
---
----- SOURCE CODE

@external(javascript, "wibble", "wobble")
fn javascript_only() -> Int

@external(erlang, "wibble", "wobble")
fn erlang_only() -> Int

pub fn main() {
    javascript_only()
    erlang_only()
}


----- ERROR
error: Function supports no targets
  ┌─ /src/one/two.gleam:8:1
  │
8 │ pub fn main() {
  │ ^^^^^^^^^^^^^

The `main` function has calls to conflicting functions, meaning
it cannot run on any target.
